--- a/lab04/nerdluv.html
+++ b/lab04/nerdluv.html
@@ -88,7 +88,7 @@
         </div>
   
         <div class="validation-icon">
-          <a href="https://jigsaw.w3.org/css-validator/validator?urihttps:https://github.com/HadisMehari/.github.io/tree/main/lab04/nerdluv.css" target="_blank"> <img
+          <a href="https://jigsaw.w3.org/css-validator/validator?urihttps:https://hadismehari.github.io/lab04/nerdluv.css" target="_blank"> <img
               src="../images/w3c-css.png" alt="CSS Validator" /></a>
         </div>
          
