--- a/homework02/movie.html
+++ b/homework02/movie.html
@@ -243,7 +243,7 @@
         <a href="http://validator.w3.org/check?uri=https://hadismehari.github.io/homework02/movie.html" target="_blank">
             <img src="images/w3c-html.png" alt="Valid HTML5"/></a> <br/>
 
-        <a href="http://jigsaw.w3.org/css-validator/validator?urihttps:https://hadismehari.github.io/homework02/movie.css" target="_blank">
+        <a href="http://jigsaw.w3.org/css-validator/validator?uri=https://hadismehari.github.io/homework02/movie.css" target="_blank">
         <img src="images/w3c-css.png" alt="Valid CSS" /></a>
 
     </div>
