--- a/homework02/movie.html
+++ b/homework02/movie.html
@@ -241,10 +241,10 @@
 
     <div id ="alignright">
         <a href="http://validator.w3.org/check?uri=https://hadismehari.github.io/homework02/movie.html" target="_blank">
-            <img src="images/w3c-html.png" alt="Valid HTML5"/></a> <br/>
+            <img src="../images/w3c-html.png" alt="Valid HTML5"/></a> <br/>
 
         <a href="http://jigsaw.w3.org/css-validator/validator?uri=https://hadismehari.github.io/homework02/movie.css" target="_blank">
-        <img src="images/w3c-css.png" alt="Valid CSS" /></a>
+        <img src="../images/w3c-css.png" alt="Valid CSS" /></a>
 
     </div>
 </body>
