--- a/lab04/nerdluv.html
+++ b/lab04/nerdluv.html
@@ -88,8 +88,8 @@
         </div>
   
         <div class="validation-icon">
-          <a href="https://jigsaw.w3.org/css-validator/validator?uri=https://hadismehari.github.io/lab04/nerdluv.css" target="_blank"> <img
-              src="../images/w3c-css.png" alt="CSS Validator" /></a>
+          <a href="https://jigsaw.w3.org/css-validator/validator?uri=https://hadismehari.github.io/lab04/nerdluv.css" target="_blank"> 
+            <img src="../images/w3c-css.png" alt="CSS Validator" /></a>
         </div>
          
     </div>
