--- a/lab04/nerdluv.html
+++ b/lab04/nerdluv.html
@@ -5,7 +5,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Nerdluv</title>
-    <link rel="stylesheet" href= "CSS/nerdluv.css" type="text/css">
+    <link rel="stylesheet" href= "nerdluv.css" type="text/css">
 </head>
 <body class="container">
 
@@ -84,7 +84,7 @@
       
         <div class="validation-icon">
           <a href="http://validator.w3.org/check?uri=https://hadismehari.github.io/lab04/nerdluv.html" target="_blank"> 
-            <img src="../images/w3c-html.png" alt="HTML Validator" /></a>
+            <img src="../images/w3c-html.png" alt="HTML Validator"/></a>
         </div>
   
         <div class="validation-icon">
