--- a/index.html
+++ b/index.html
@@ -20,6 +20,8 @@
                 <li><a href="homework02/movie.html">Homework02 - Movie Review</a></li>
                 <li><a href="lab03/grades.html">Lab03 - Grades</a> </li>
                 <li><a href="lab04/nerdluv.html">Lab04 - HTML Forms Lab</a> </li>
+                <li><a href="homework03/alert.html">Homework03 - Button</a> </li>
+                <li><a href="homework04/tip.html">Homework04 - Calculate Tips</a> </li>
                 <li><a href="#">Lab05 - HTML Forms</a></li>
                 <li><a href="#">Lab06 - Decorating Text</a></li>
                 <li><a href="#">Lab07 - Modules and Closures</a></li>
