--- a/homework03/alert.html
+++ b/homework03/alert.html
@@ -14,7 +14,7 @@
       <button onclick="displayAlert();">Click Me!</button>
     </div>
 
-  <script type="text/javascript">
+  <script>
     function displayAlert(){
       alert("You Clicked Me");
     }
