--- a/index.html
+++ b/index.html
@@ -56,12 +56,12 @@
 
   <div><br>
     
-      <a href="http://validator.w3.org/check?uri=https://hadismehari.github.io/.github.io/index.html"> <img src="./images/w3c-html.png"
-        alt="html validator" /></a>
+      <a href="http://validator.w3.org/check?uri=https://hadismehari.github.io/index.html"> 
+        <img src="./images/w3c-html.png"alt="html validator" /></a>
   </div> 
   <div class="validation-icon">
-      <a href="https://jigsaw.w3.org/css-validator/validator?urihttps://hadismehari.github.io/.github.io/" target="_blank"> <img
-        src="../images/w3c-css.png" alt="CSS Validator" /></a>
+      <a href="https://jigsaw.w3.org/css-validator/validator?uri=uri=https://hadismehari.github.io/" target="_blank"> <img
+        src="./images/w3c-css.png" alt="CSS Validator" /></a>
   </div>
 
      
