--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 
-    <img src="images/Hadis.jpg" width="300px" height="400px"> 
+    <img class= "image" src="images/Hadis.jpg"> 
     <h2>Hadis Mehari Meless</h2>
     
     <div>
