--- a/index.html
+++ b/index.html
@@ -7,9 +7,11 @@
     <title>My Homepage</title>
 </head>
 <body>
-
-    <img class= "image" src="images/Hadis.jpg"> 
-    <h2>Hadis Mehari Meless</h2>
+    <div class= "image">
+      <img  src="images/Hadis.jpg"> 
+      <h2>Hadis Mehari Meless</h2>
+    </div>
+   
     
     <div>
         <section>
