--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <div class= "image">
-      <img  src="images/Hadis.jpg"> 
+      <img  src="images/Hadis.jpg"/> 
       <h2>Hadis Mehari Meless</h2>
     </div>
    
