--- a/index.html
+++ b/index.html
@@ -5,14 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=<device-width>, initial-scale=1.0">
     <title>My Homepage</title>
-    <link href="index.css" type="text/css" rel="stylesheet" />
+    <link rel="stylesheet" href= "index.css" type="text/css">
+
 </head>
 <body>
-    <div class= "image">
-      <img  src="images/Hadis.jpg"/> 
-      <h2>Hadis Mehari Meless</h2>
-    </div>
-   
+
+    <img class= "image" src="images/Hadis.jpg"> 
+    <h2>Hadis Mehari Meless</h2>
     
     <div>
         <section>
@@ -61,7 +60,7 @@
   <div><br>
     
       <a href="http://validator.w3.org/check?uri=https://hadismehari.github.io/index.html"> 
-        <img src="./images/w3c-html.png" alt="html validator" /></a>
+        <img src="./images/w3c-html.png"alt="html validator" /></a>
   </div> 
   <div class="validation-icon">
       <a href="https://jigsaw.w3.org/css-validator/validator?uri=uri=https://hadismehari.github.io/" target="_blank"> <img
