--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
 
-    <img class= "image" src="images/Hadis.jpg"> 
+    <img class= "image" src="images/Hadis.jpg" alt ="Valid Image not found"> 
     <h2>Hadis Mehari Meless</h2>
     
     <div>
