--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
               <ul>
                 <li><a href="./index.html">Lab01 - Home Page</a></li>
                 <li><a href="./aboutme.html">Lab02 - About me</a></li>
-                <li><a href="./pie.html">Lab02 - Recipes</a></li>
+                <li><a href="./pie/pie.html">Lab02 - Recipes</a></li>
                 <li><a href="homework02/movie.html">Homework02 - Movie Review</a></li>
                 <li><a href="lab03/grades.html">Lab03 - Grades</a> </li>
                 <li><a href="lab04/nerdluv.html">Lab04 - HTML Forms Lab</a> </li>
