--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                 <li><a href="homework03/alert.html">Homework03 - Button</a> </li>
                 <li><a href="homework04/tip.html">Homework04 - Calculate Tips</a> </li>
                 <li><a href="#">Lab05 - HTML Forms</a></li>
-                <li><a href="#">Lab06 - Decorating Text</a></li>
+                <li><a href="lab06/decoratemytext.html">Lab06 - Decorating Text</a></li>
                 <li><a href="#">Lab07 - Modules and Closures</a></li>
                 <li><a href="#">Lab08 - Mouse Maze</a></li>
                 <li><a href="#">Lab09 - Simple Calculator</a></li>
