--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                 <li><a href="#">Lab05 - HTML Forms</a></li>
                 <li><a href="lab06/decoratemytext.html">Lab06 - Decorating Text</a></li>
                 <li><a href="lab07/bankAccount.html">Lab07 - Modules and Closures</a></li>
-                <li><a href="exercises/exercises/">ScopeExercises - Scope Exercises</a></li>
+                <li><a href="ScopeExercises/scopeExercises.txt">ScopeExercises - Scope Exercises</a></li>
                 <li><a href="homework08/ascii.html">Homework08: -Javascript and ASCII Animation</a></li>
                 <li><a href="">Lab08 - Mouse Maze</a></li>
                 <li><a href="#">Lab09 - Simple Calculator</a></li>
