--- a/index.html
+++ b/index.html
@@ -30,7 +30,8 @@
                 <li><a href="lab07/bankAccount.html">Lab07 - Modules and Closures</a></li>
                 <li><a href="ScopeExercises/scopeExercises.txt">ScopeExercises - Scope Exercises</a></li>
                 <li><a href="homework08/ascii.html">Homework08: -Javascript and ASCII Animation</a></li>
-                <li><a href="">Lab08 - Mouse Maze</a></li>
+                <li><a href="JQuery/maze/maze.html">Lab08 - Mouse Maze</a></li>
+                <li><a href="JQuery/JQueryQuiz1/jQueryQuiz-1.txt">JQuery Quiz-1</a></li>
                 <li><a href="#">Lab09 - Simple Calculator</a></li>
                 <li><a href="#">Lab10 - Number</a></li>
                 <li><a href="#">Project</a></li>
