--- a/homework09/fifteen.html
+++ b/homework09/fifteen.html
@@ -8,7 +8,7 @@
 
 		<!-- instructor-provided JavaScript files; do not modify -->
 		<script src="./fifteen_files/prototype.js.download" type="text/javascript"></script>
-		<script src="./fifteen_files/grading.js.download" type="text/javascript"></script>
+		<script src="./fifteen_files/grading.js.download" ></script>
 
 		<!-- your files that you will write -->
 		<link href="./css/fifteen.css" type="text/css" rel="stylesheet"> 
