--- a/homework09/fifteen.html
+++ b/homework09/fifteen.html
@@ -7,7 +7,7 @@
  <title>Fifteen Puzzle</title>
 
 		<!-- instructor-provided JavaScript files; do not modify -->
-		<script src="./fifteen_files/prototype.js.download" type="text/javascript"></script>
+		<script src="./fifteen_files/prototype.js.download" ></script>
 		<script src="./fifteen_files/grading.js.download" ></script>
 
 		<!-- your files that you will write -->
