--- a/homework09/fifteen.html
+++ b/homework09/fifteen.html
@@ -12,7 +12,7 @@
 
 		<!-- your files that you will write -->
 		<link href="./css/fifteen.css" type="text/css" rel="stylesheet"> 
-		<script src="./fifteen_files/fifteen.js.download" type="text/javascript"></script>		
+		<script src="./fifteen_files/fifteen.js.download"></script>		
 		<script src="../jquery/jquery-3.6.0.min.js"></script>
 		<script src="./js/fifteen.js"></script>
 	</head>
