--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
                 <li><a href="JQuery/maze/maze.html">Lab08 - Mouse Maze</a></li>
                 <li><a href="JQuery/JQueryQuiz/jQueryQuiz-1.txt">JQuery Quiz-1</a></li>
                 <li><a href="JQuery/JQueryQuiz/jQueryQuiz-2.txt">JQuery Quiz-2</a></li>
+                <li><a href="JQuery/JQueryQuiz/jQueryQuiz-3.txt">JQuery Quiz-3</a></li>
                 <li><a href="homework09/fifteen.html">Homework09 - Fifteen Puzzle</a></li>
                 <li><a href="#">Lab09 - Simple Calculator</a></li>
                 <li><a href="#">Lab10 - Number</a></li>
